[gd_scene load_steps=8 format=3 uid="uid://c2vcp2b2m8vw4"]

[ext_resource type="Script" uid="uid://pexv4vlbnu4b" path="res://assets/scenes/user_profile.gd" id="1_ywsak"]
[ext_resource type="PackedScene" uid="uid://dmoj3jca7lrq3" path="res://assets/scenes/PenguinCard.tscn" id="2_ttceo"]
[ext_resource type="Texture2D" uid="uid://dob3ljgrtwfm6" path="res://assets/art/others/profile_bg.png" id="3_rbiho"]
[ext_resource type="Texture2D" uid="uid://b1pxh3yax0yat" path="res://assets/art/others/user.png" id="4_5b6e3"]
[ext_resource type="FontFile" uid="uid://pqt8x14r650l" path="res://assets/fonts/Sniglet-ExtraBold.ttf" id="4_cs7eh"]
[ext_resource type="AudioStream" uid="uid://dheq4gt6qccur" path="res://assets/music/Click.mp3" id="6_rbiho"]
[ext_resource type="FontFile" uid="uid://cd1aioybntas7" path="res://assets/fonts/Sniglet-Regular.ttf" id="7_cs7eh"]

[node name="UserProfile" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ywsak")
penguin_card_scene = ExtResource("2_ttceo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 361)
scale = Vector2(0.833375, 0.705711)
texture = ExtResource("3_rbiho")

[node name="LeftPanel" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 408.0
offset_bottom = 720.0

[node name="Username" type="Label" parent="LeftPanel"]
layout_mode = 2
offset_left = 47.0
offset_top = 40.0
offset_right = 454.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0.117647, 0.223529, 0.407843, 1)
theme_override_fonts/font = ExtResource("4_cs7eh")
theme_override_font_sizes/font_size = 52
text = "Username"

[node name="UserPenguinImage" type="TextureRect" parent="LeftPanel"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
offset_left = 53.0
offset_top = 80.0
offset_right = 1838.0
offset_bottom = 1700.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_5b6e3")
stretch_mode = 5

[node name="DaysPlayed" type="Label" parent="LeftPanel"]
layout_mode = 2
offset_left = 40.0
offset_top = 451.0
offset_right = 448.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(0.1, 0.2, 0.596, 1)
theme_override_fonts/font = ExtResource("7_cs7eh")
theme_override_font_sizes/font_size = 24
text = "Days Played: 150"

[node name="OwnedPenguins" type="Label" parent="LeftPanel"]
layout_mode = 2
offset_left = 40.0
offset_top = 534.0
offset_right = 448.0
offset_bottom = 557.0
theme_override_colors/font_color = Color(0.1, 0.2, 0.596, 1)
theme_override_fonts/font = ExtResource("7_cs7eh")
theme_override_font_sizes/font_size = 24
text = "Owned Penguins: 12"

[node name="TotalRevenue" type="Label" parent="LeftPanel"]
layout_mode = 2
offset_left = 40.0
offset_top = 617.0
offset_right = 448.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0.1, 0.2, 0.596, 1)
theme_override_fonts/font = ExtResource("7_cs7eh")
theme_override_font_sizes/font_size = 24
text = "Total Revenue: $1,240"

[node name="RightPanel" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 147.0
offset_bottom = 40.0

[node name="PenguinScroll" type="ScrollContainer" parent="RightPanel"]
layout_mode = 2
offset_left = 514.0
offset_top = 98.0
offset_right = 1346.0
offset_bottom = 653.0
horizontal_scroll_mode = 0

[node name="PenguinGrid" type="GridContainer" parent="RightPanel/PenguinScroll"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = -30
theme_override_constants/v_separation = -50
columns = 4

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1051.0
offset_top = 19.0
offset_right = 1251.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("7_cs7eh")
theme_override_font_sizes/font_size = 24
text = "Back to Village"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rbiho")

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
